--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,13 @@
     body{
-
         background: linear-gradient(30deg, rgb(255,100, 100, .8), rgb(250,0,0,0) 75%),
-         linear-gradient(240deg, rgb(0,160,120, .7), rgb(0,230,0,0.1) 50%),
-         linear-gradient(30deg, rgb(230,170,230, .7), rgb(240,230,244,0.1) 20%),
-         linear-gradient(300deg, rgb(30,10,170,.9), rgb(0,0,255,0.5) 75%);
-
+        linear-gradient(240deg, rgb(0,160,120, .7), rgb(0,230,0,0.1) 50%),
+        linear-gradient(30deg, rgb(230,170,230, .7), rgb(240,230,244,0.1) 20%),
+        linear-gradient(300deg, rgb(30,10,170,.9), rgb(0,0,255,0.5) 75%);
         background-color: black;
-
-        }
+    }
 
     nav{
-        width: 99%;
+        width: 98%;
         height: 70px;
         top: 0;
         left: 0;
@@ -22,7 +19,7 @@
         position: fixed;
         background-color: rgb(255, 255, 255, 0);
         z-index: 30;
-        }
+    }
 
     #moreButton{
         font-size: 30px;
@@ -31,15 +28,13 @@
         border-color: white;
         color: white;
         background-color: black;
-        }
+    }
     #moreButton:hover{
-
         filter: brightness(70%);
-            }
+    }
     #moreButton:active{
-
-        filter: brightness(50%);
-            }
+       filter: brightness(50%);
+    }
 
     .naviList{
         display: inline-block;
@@ -57,21 +52,18 @@
         border-radius: 5px;
         color: white;
         box-shadow: 100px;
-        }
+    }
+
     a{
         color: white;
         font-weight: bold;
-        text-decoration: none;}
+        text-decoration: none;
+    }
+
     #xButtonBox{
-
-        width:20px;
-        height: 800px;
-
-        padding-top: 0px;
-        margin-left: 0px;
-        margin-right: 1px;
-
-        }
+        width:100%;
+        border: 1px solid;
+    }
 
     #xButton{
         width:28px;
@@ -80,73 +72,94 @@
         color:white;
         background-color: red;
         border-color: white;
-        }
+    }
 
     #xButton:hover{
         filter: brightness(80%);
-            }
+    }
     #xButton:active{
-            filter: brightness(50%);
-                }
+        filter: brightness(50%);
+    }
 
-    #line1{
-        margin-left: 50px;}
-    .title{
-        margin-top: 300px;
+    #hello{
+        width: 10ch;
+        white-space: nowrap;
+        overflow: hidden;
+        animation: typing 2s steps(20) infinite
+        alternate-reverse;
+        color: white;
+        margin-left:200px;
+    }
+
+    @keyframes typing{
+        from{
+            width: 0ch;
+        }
+    }
+    #mainImage{
+        text-align: center;
+    }
+    .mainTitle{
+        width: 1200px;
+        margin-top: 200px;
         font-weight: bold;
         font-size: 50px;
         text-align: center;
         color: white;
         z-index: 10;
         position: absolute;
-        top:200px;
+        top: 50px;
         bottom:0;
-        left:0;
-        right:0;
+        left: 0;
+        right: 0;
         margin-left: auto;
         margin-right: auto;
-
     }
+
     body{
-
     }
+
     #backGround{
         text-align: center;
         filter: opacity(50%);
-        }
-    #aboutMe{
-            width: 1200px;
-            height: 1000px;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin-top: auto;
-            margin-left: auto;
-            margin-right: auto;
-            text-align: center;
-            display:none;
-            color: white;
+        margin-top: 10%;
+    }
 
-            }
+    #aboutMe{
+        width: 1100px;
+        height: 880px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin-top: 10%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        display:none;
+        color: white;
+    }
 
     #animal{
-    width: 1200px;
-                height: 700px;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                margin-top: 200px;
-                margin-left: auto;
-                margin-right: auto;
-                text-align: center;
-
-                color: white;
+        width: 100%;
+        height: 83vh;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin-top: 0%;
+        margin-bottom: 10%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        color: white;
+        border-color: white;
+        borer: 5px solid;
     }
+
     #box1{
-        width: 1060px;
-        height: 860px;
+        width: 100%;
+        height: 92%;
         border: 7px solid transparent;
         border-color: rgba(122, 122, 122, 0.3);
         border-radius: 10px;
@@ -154,9 +167,10 @@
         left: 0;
         right: 0;
         bottom: 0;
-        margin-top: auto;
+        margin-top: 0%;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 0;
         text-align: center;
         background: linear-gradient(#fff, #fff), linear-gradient(to right bottom, #95b5fb, rgba(220,130,241));
         background-origin: border-box;
@@ -165,50 +179,51 @@
     }
 
     #box2_0{
-            color: blue;
-            width: 850px;
-            height: 450px;
-            background-color: black;
-            border: 7px solid;
-            border-color: black;
-            border-radius: 10px;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin-top: auto;
-            margin-left: auto;
-            margin-right: auto;
-            text-align: center;
-            font-weight: bold;
-            font-size: 70px;
-            z-index: 0;
-            padding: 30px;
+        color: blue;
+        width: 50%;
+        height: 50vh;
+        background-color: black;
+        border: 7px solid;
+        border-color: black;
+        border-radius: 10px;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin-top: 15%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        font-weight: bold;
+        font-size: 70px;
+        z-index: 0;
+        padding: 30px;
     }
+
     .tv{
         color: rgba(160, 70, 160, 0.7);
         font-size: 20px;
         font-weight: bold;
         width: 100px;
         height: 40px;
-        background-color: linear(140, 70, 190, 0.7);;
+        background-color: linear(140, 70, 190, 0.7);
         border-radius: 10px;
         border: 1px solid;
         border-color: black;
         cursor: pointer;
-        }
+    }
+
     .tv:hover{
         filter: brightness(80%);
     }
 
     .tv:active{
-            filter: brightness(50%);
-        }
+        filter: brightness(50%);
+    }
 
-    #box2{
+    #box2_1{
         display: none;
-        width: 850px;
-        height: 450px;
+        width: 50%;
+        height: 50vh;
         background-color: black;
         border: 7px solid;
         border-color: black;
@@ -217,80 +232,83 @@
         left: 0;
         right: 0;
         bottom: 0;
-        margin-top: auto;
+        margin-top: 15%;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
         overflow-y: scroll;
         padding: 30px;
         z-index: 1;
-
-        }
+    }
 
     span{
         color: white;
         font-weight: bold;
         font-style: oblique;
         font-size: 50px;
-        }
-    #line3{
-        margin-right: 0px;
-        }
+    }
 
-    .box1_content{
+    #xButtonBox{
+        width: 99%;
+        height: 20px;
+        margin-top:5px;
+        text-align: right;
+    }
+    .box1_Content{
         display: inline-block;
-        width: 300px;
-        height: 800px;
-        margin: 10px;
-        padding: 0px;
+        width: 320px;
+
+        height: 2vh;
         text-align: center;
         color: black;
         color: rgba(50, 50, 50);
         margin-left: 10px;
+    }
 
+    .content{
+        margin-bottom: 45%;
+        margin-top: 0%;
     }
     .box_tag{
-        font-size: 18px;
         color: rgba(11, 110, 200);
         font-weight: bold;
-
-
-        }
+    }
 
    .box2_image{
-        width: 200px;
-        height: 280px;
+        width: 30%;
+        height: 70%;
         padding: 0;
         margin-left: 0px;
         margin-right: 0px;
         border-radius: 0px;
         cursor: pointer;
 
-        }
+   }
+
    .box2_image:hover{
-        width: 201px;
         filter:brightness(80%);
 
-        }
+   }
+
    .box2_image:active{
-           width: 201px;
-           filter:brightness(50%);
+        filter:brightness(50%);
 
-           }
-
+   }
 
    #profile_image{
         border-radius: 10px;
-        width: 250px;
-        height: 250px;
+        width: 230px;
+        height: 230px;
         margin-top: 2px;
-        }
+   }
+
    #tag2{
        color:#ffb6c1;
-       }
+   }
+
    #center{
         font-size: 18px;
-        }
+   }
 
    .modal{
         display: none;
@@ -307,16 +325,21 @@
         margin-left: auto;
         margin-right: auto;
         text-align: center;
-        }
+   }
 
    .modal_Image{
     }
+
    .modalTitle{
         color: black;
         font-size: 30px;
-        font-weight: bold;}
+        font-weight: bold;
+   }
+
    #contentDivButton{
-        width: 20px;}
+        width: 20px;
+   }
+
    .close{
         text-align: right;
         font-size: 16px;
@@ -329,16 +352,16 @@
         border: 1px solid;
         color: white;
         background-color: red;
-        }
+   }
+
    .close:hover{
         filter: brightness(80%);
-        }
+   }
    .close:active{
         filter: brightness(40%);
-        }
+   }
 
    .contentBox0{
-
         width: 1000px;
         height: 655px;
         display: flex;
@@ -351,15 +374,14 @@
         margin-top: auto;
         margin-bottom: auto;
         background-color: white;
-        }
+   }
+
    .contentBox1{
         text-align: left;
         height: 600px;
         border: 3px solid;
         border-color: white;
-
-
-        }
+   }
    .contentBox2{
         width: 800px;
         height: 600px;
@@ -371,38 +393,36 @@
         background-color: white;
         border: 3px solid;
         border-color: white;
-
-
-        }
-   #title2{
+   }
+   #galleryTitle2{
         color: transparent;
         background: linear-gradient(160deg, rgba(255, 255, 70), rgba(100, 40, 255)60%);
         background-clip: text;
+        margin-top: 10%;
+        width: 100%;
+   }
+   .galleryTitle{
+        color: white;
+        font-size: 70px;
+   }
 
-        }
-   .title2{
-           color: white;
-           font-size: 70px;
-
-           }
     .contentDivButton{
          height: 600px;
          width:50px;
          background-color: white;
          border: 3px solid;
          border-color: white;
-
-         }
+    }
     #tvTitle{
-        width: 840px;
-
+        width: 100%;
         font-size: 30px;
         font-weight: bold;
         text-align: center;
         color: transparent;
-                background: linear-gradient(160deg, rgba(255, 255, 70), rgba(100, 40, 255)60%);
-                background-clip: text;
-        }
+        background: linear-gradient(160deg, rgba(255, 255, 70), rgba(100, 40, 255)60%);
+        background-clip: text;
+    }
+
     #monitor{
         width:50px;
         height: 50px;
@@ -415,7 +435,7 @@
         margin-right: auto;
         margin-top: auto;
         margin-bottom: auto;
-        }
+    }
     #monitor2{
             width:400px;
             height: 20px;
@@ -429,4 +449,4 @@
             margin-right: auto;
             margin-top: auto;
             margin-bottom: auto;
-            }
+    }
